remove authenticate endpoint and use verifypassword endpoint
